--- a/src/index.css
+++ b/src/index.css
@@ -53,22 +53,13 @@ img {
 	height: auto;
 }
 
-.visually-hidden {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	margin: -1px;
-	border: 0;
-	padding: 0;
-	white-space: nowrap;
-	clip-path: inset(100%);
-	clip: rect(0 0 0 0);
-	overflow: hidden;
+html,
+body {
+	height: 100%;
 }
 
 /* Project settings */
 body {
-	min-height: 100vh;
 	line-height: 1;
 	overflow-wrap: break-word;
 	min-width: 320px;
@@ -76,6 +67,7 @@ body {
 	font-size: 16px;
 	color: #212121;
 	font-family: Roboto, Arial, sans-serif;
+	background-image: linear-gradient(rgba(255, 255, 255, 0.90), rgba(255, 255, 255, 0.90)), url('./img/bg.jpg');
 
 	&.ReactModal__Body--open {
 		overflow: hidden;
