--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,29 +1,3 @@
-/* Стилi для overlay */
-/* .overlayStyle {
-	background-color: rgba(0, 0, 0, 0.75);
-} */
-
-/* Стилi для content */
-/* .contentStyle {
-	padding: 0;
-	border: 2px solid #fff;
-	top: 50%;
-	left: 50%;
-	right: auto;
-	bottom: auto;
-	margin-right: -50%;
-	transform: translate(-50%, -50%);
-	max-width: 90%;
-	max-height: 90%;
-	overflow: hidden;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	position: relative;
-} 
-Працюють не корректно	
-*/
-
 .imageStyle {
 	max-width: 90vw;
 	max-height: 90vh;
@@ -53,7 +27,7 @@
 	top: 15px;
 	left: 15px;
 	background-color: #fff;
-	padding: 6px 8px;
+	padding: 7px 8px 5px;
 	border-radius: 4px;
 	opacity: 0.5;
 	transition: opacity 0.3s ease 0s;
@@ -65,6 +39,8 @@
 	.likesIcon {
 		transition: color 0.3s ease 0s;
 		font-size: 18px;
+		position: relative;
+		top: -1px;
 	}
 
 	&:hover {
